<resources>
    <string name="app_name">MVVMLogin</string>
    <string name="sign_in">SIGN IN</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="re_enter">Re enter</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email_id">Email id</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of birth</string>
</resources>